<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow this library to be built
     side-by-side to ROS packages in a catkin/ament environment.
-->
<package format="3">
  <name>mola_basalt_vio</name>
  <version>0.0.0</version>
  <description>Visual-Inertial Odometry module wrapping Basalt</description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>
  <license>BSD-3-Clause</license>

  <url type="website">https://docs.mola-slam.org/</url>
  <url type="repository">https://github.com/MOLAorg/mola_vision/</url>

  <!-- core dependencies -->
  <depend>mola_common</depend>
  <depend>mola_kernel</depend>

  <doc_depend>doxygen</doc_depend>

  <!-- Entries to make ROS 2 to discover this as a proper package -->
  <build_depend>ros_environment</build_depend>

  <build_depend>ament_cmake_xmllint</build_depend>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_gtest</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_lint_cmake</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <!-- Needed by the mola-lo-* scripts: -->
  <exec_depend>mola_launcher</exec_depend>
  <exec_depend>mola_viz</exec_depend>

  <test_depend>rosbag2_storage_mcap</test_depend> <!-- Needed to be able to open mcap test files -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>  
  <!-- End -->

</package>
