<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mola_rgbd_slam</name>
  <version>0.1.0</version>
  <description>
    RGB-D visual SLAM front-end for the MOLA framework. Estimates the camera
    trajectory and a sparse 3D landmark map from registered depth + intensity
    observations (CObservation3DRangeScan), built on mola_libvision
    (Shi-Tomasi + LK tracking, depth back-projection, robust PnP, and
    sliding-window bundle adjustment). No OpenCV, no Ceres.
  </description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>
  <license file="LICENSE">GPL-3.0-or-later</license>

  <url type="website">https://github.com/MOLAorg/mola_vision</url>

  <depend>mola_common</depend>
  <depend>mola_kernel</depend>
  <depend>mola_libvision</depend>
  <depend>mrpt_obs</depend>
  <depend>mrpt_img</depend>
  <depend>mrpt_maps</depend>
  <depend>mrpt_viz</depend>

  <!-- Runtime modules used by the demo launch files -->
  <exec_depend>mola_viz</exec_depend>
  <exec_depend>mola_launcher</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <doc_depend>doxygen</doc_depend>
  <build_depend>ros_environment</build_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
